crates/otter-runtime/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.stderr
error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const ()`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const ObjectBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const otter_vm::object::shape_body::ShapeBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: the trait `Send` is not implemented for `(dyn StepTracer + 'static)`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: the trait `Send` is not implemented for `(dyn ShapeTransitionObserver + 'static)`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*mut otter_gc::header::GcHeader`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const (dyn otter_gc::frame_roots::FrameRoots + 'static)`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error[E0277]: `*const JsStringBody` cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ `*const JsStringBody` cannot be sent between threads safely
  |
  = help: within `(std::string::String, otter_gc::compressed::Gc<JsStringBody>)`, the trait `Send` is not implemented for `*const JsStringBody`
note: required because it appears within the type `PhantomData<*const JsStringBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<JsStringBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required because it appears within the type `(std::string::String, otter_gc::compressed::Gc<JsStringBody>)`
  = note: required for `hashbrown::raw::RawTable<(std::string::String, otter_gc::compressed::Gc<JsStringBody>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<std::string::String, otter_gc::compressed::Gc<JsStringBody>, RandomState>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<std::string::String, otter_gc::compressed::Gc<JsStringBody>>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `otter_vm::object::shape_runtime::ShapeRuntime`
 --> $WORKSPACE/crates/otter-vm/src/object/shape_runtime.rs
  |
  | pub(crate) struct ShapeRuntime {
  |                   ^^^^^^^^^^^^
note: required because it appears within the type `Interpreter`
 --> $WORKSPACE/crates/otter-vm/src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&mut Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeCx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeCx<'rt> {
  |                   ^^^^^^^^^
note: required because it appears within the type `NativeCtx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required because it's used within this `async` block
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18
  |
5 |     tokio::spawn(async move {
  |                  ^^^^^^^^^^
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const SymbolBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const GeneratorBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error[E0277]: `*const PurePromiseBody` cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ `*const PurePromiseBody` cannot be sent between threads safely
  |
  = help: within `(Arc<str>, otter_vm::module_records::ModuleRecordState)`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: required because it appears within the type `PhantomData<*const PurePromiseBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<PurePromiseBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `PurePromise`
 --> $WORKSPACE/crates/otter-vm/src/promise.rs
  |
  | pub struct PurePromise {
  |            ^^^^^^^^^^^
note: required because it appears within the type `promise::PromiseRepr`
 --> $WORKSPACE/crates/otter-vm/src/promise.rs
  |
  | enum PromiseRepr {
  |      ^^^^^^^^^^^
note: required because it appears within the type `JsPromiseHandle`
 --> $WORKSPACE/crates/otter-vm/src/promise.rs
  |
  | pub struct JsPromiseHandle {
  |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `Option<JsPromiseHandle>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::module_records::ModuleRecordState`
 --> $WORKSPACE/crates/otter-vm/src/module_records.rs
  |
  | pub(crate) struct ModuleRecordState {
  |                   ^^^^^^^^^^^^^^^^^
  = note: required because it appears within the type `(Arc<str>, otter_vm::module_records::ModuleRecordState)`
  = note: required for `hashbrown::raw::RawTable<(Arc<str>, otter_vm::module_records::ModuleRecordState)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<Arc<str>, otter_vm::module_records::ModuleRecordState, RandomState>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<Arc<str>, otter_vm::module_records::ModuleRecordState>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `Interpreter`
 --> $WORKSPACE/crates/otter-vm/src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&mut Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeCx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeCx<'rt> {
  |                   ^^^^^^^^^
note: required because it appears within the type `NativeCtx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required because it's used within this `async` block
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18
  |
5 |     tokio::spawn(async move {
  |                  ^^^^^^^^^^
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `[otter_gc::compressed::Gc<UpvalueCellBody>]`, the trait `Send` is not implemented for `*const UpvalueCellBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`
